# statement_finder

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/statement_finder/: cli.py  core.py  gui.py
tests/: test_smoke.py
